Added sample paragraphs, to show strong and em tags.  Added Comments.

--- a/My First Website/index.html
+++ b/My First Website/index.html
@@ -14,5 +14,17 @@
     <h6>Heading 6</h6>
     <p>My First Website!</p>
     <p>This is really cool.  I'm building a web page!</p>
+
+    <!-- Strong makes the text bold. -->
+    <!-- Do not use <b> and <i>. -->
+    <p>
+        <strong>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore <em>magna aliqua</em></strong>. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. <strong>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</strong>
+    </p>
+    <!-- This is an HTML comment  - em stands for emphasis.  This makes the text italic. -->
+    <p>
+        <em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</em>. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+
+    </p>
 </body>
 </html>
