Added formatting text examples to body.

--- a/My First Website/index.html
+++ b/My First Website/index.html
@@ -23,8 +23,16 @@
     <!-- This is an HTML comment  - em stands for emphasis.  This makes the text italic. -->
     <p>
         <em>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</em>. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-
     </p>
+    <p><b>Bold Text</b></p>
+    <p><strong>Strong Text</strong></p>
+    <p><i>Italic Text</i></p>
+    <p><em>Emphasized Text</em></p>
+    <p><mark>Marked Text</mark></p>
+    <p><small>Small Text</small></p>
+    <p>Deleted <del>Extra </del>Text</p>
+    <p>Inserted <ins>Extra </ins>Text</p>
+    <p><sub>Subscript Text</sub></p>
+    <p><sup>Superscript Text</sup></p>
 </body>
 </html>
