--- a/My First Website/lists.html
+++ b/My First Website/lists.html
@@ -56,5 +56,13 @@
         <li>Original Second</li>
         <li>Original Third</li>
     </ol>
+
+    <h4>Value Attribute - Ordered List</h4>
+    <p>&#60;li value="9"&#62;</p>
+    <ol>
+        <li>Number 1</li>
+        <li value="9">Number 9</li>
+        <li>Number 10</li>
+    </ol>
 </body>
 </html>
