Added Comments for current lists

--- a/My First Website/lists.html
+++ b/My First Website/lists.html
@@ -6,7 +6,7 @@
     <title>Lists</title>
 </head>
 <body>
-
+    <!-- Favorite Foods ------------- -->
     <h4>Favorite Foods List</h4>
     <ul>
         <li>pasta</li>
@@ -15,6 +15,7 @@
         <li>salumi</li>
     </ul>
 
+    <!-- Today's Todo List ------------- -->
     <h4>Today's Todo List</h4>
     <ol>
         <li>Finish lessons</li>
@@ -23,6 +24,7 @@
         <li>Go home</li>
     </ol>
 
+    <!-- Places to Visit ------------- -->
     <h4>Places to Visit</h4>
     <ul>
         <li>Positano</li>
@@ -32,6 +34,7 @@
         <li>Amalfi</li>
     </ul>
 
+    <!-- Top 5 Movies ------------- -->
     <h4>Top 5 Movies</h4>
     <ol>
         <li>Fantozzi</li>
@@ -41,6 +44,7 @@
         <li>Fantozzi va in pensione</li>
     </ol>
 
+    <!-- Start Attribute ------------- -->
     <h4>Start Attribute - Ordered List </h4>
     <p>&#60;ol start="100"&#62;</p>
     <ol start="100">
@@ -49,6 +53,7 @@
         <li>Now at 102</li>
     </ol>
 
+    <!-- Reversed Attribute ------------- -->
     <h4>Reversed Attribute - Ordered List </h4>
     <p>&#60;ol reversed&#62;</p>
     <ol>
@@ -57,6 +62,7 @@
         <li>Original Third</li>
     </ol>
 
+    <!-- Value Attribute ------------- -->
     <h4>Value Attribute - Ordered List</h4>
     <p>&#60;li value="9"&#62;</p>
     <ol>
@@ -64,5 +70,7 @@
         <li value="9">Number 9</li>
         <li>Number 10</li>
     </ol>
+
+
 </body>
 </html>
