Added Decriptive List

--- a/My First Website/lists.html
+++ b/My First Website/lists.html
@@ -78,6 +78,17 @@
         <li>Number 10</li>
     </ol>
 
+    <!-- Description Lists ------------- -->
+    <hr />
+    <h4>Description Lists</h4>
+    <dl>
+        <dt>Fruit Family</dt>
+        <dd>Orange, apple, avocado</dd>
+        <dt>Vegetables</dt>
+        <dd>Garlic, eggplant, cabbage</dd>
+        <dt>Legumes</dt>
+        <dd>black beans, lentils</dd>
+    </dl>
 
 </body>
 </html>
