Added Nesting LIst

--- a/My First Website/lists.html
+++ b/My First Website/lists.html
@@ -90,5 +90,20 @@
         <dd>black beans, lentils</dd>
     </dl>
 
+    <!-- Nesting Lists ------------- -->
+    <hr />
+    <h4>Nesting Lists</h4>
+    <ol>
+        <li>Finish lessons</li>
+        <li>Eat dinner</li>
+        <li>Go Shopping</li>
+        <ul>
+            <li>pasta</li>
+            <li>pizza</li>
+            <li>olive</li>
+            <li>salumi</li>
+        </ul>
+        <li>Go home</li>
+    </ol>
 </body>
 </html>
