Add - Absolute Link, comments

--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Homepage</h1>
+    <!-- Ex: Absolute Link
+        - noopner = prevents the opened link from gaining access to the webpage from which it was opened
+        - noreferrer = prevents the opened link from knowing which webpage or resource has a link (or refrence) to it.
+     -->
+    <a href="https://www.theodinproject.com/about" target="_blank" rel="noopener noreferrer">About The Odin Project</a>
 </body>
 </html>
