Added link to about page

--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -12,5 +12,8 @@
         - noreferrer = prevents the opened link from knowing which webpage or resource has a link (or refrence) to it.
      -->
     <a href="https://www.theodinproject.com/about" target="_blank" rel="noopener noreferrer">About The Odin Project</a>
+
+    <!-- Ex: Relative Link -->
+    <a href="about.html">About</a>
 </body>
 </html>
