--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -14,6 +14,9 @@
     <a href="https://www.theodinproject.com/about" target="_blank" rel="noopener noreferrer">About The Odin Project</a>
 
     <!-- Ex: Relative Link -->
-    <a href=./pages/about.html">About</a>
+    <a href="./pages/about.html">About</a>
+
+    <!-- Image - Absolute path -->
+    <img src="https://www.theodinproject.com/mstile-310x310.png">
 </body>
 </html>
