Added dog image to index.html

--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -18,5 +18,8 @@
 
     <!-- Image - Absolute path -->
     <img src="https://www.theodinproject.com/mstile-310x310.png">
+
+    <!-- Image - Relative path -->
+    <img src="./images/dog.jpg">
 </body>
 </html>
