--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -17,9 +17,9 @@
     <a href="./pages/about.html">About</a>
 
     <!-- Image - Absolute path -->
-    <img src="https://www.theodinproject.com/mstile-310x310.png">
+    <img src="https://www.theodinproject.com/mstile-310x310.png" alt="The Odin Project Logo">
 
     <!-- Image - Relative path -->
-    <img src="./images/dog.jpg">
+    <img src="./images/dog.jpg" alt="The Odin Dog">
 </body>
 </html>
