--- a/odin-links-and-images/pages/about.html
+++ b/odin-links-and-images/pages/about.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>About Page</h1>
-    <img src="../images/dog.jpg" alt="The Odin Dog">
+    <img src="../images/dog.jpg" alt="The Odin Dog" height="310" width="310">
 </body>
 </html>
