Added breaks for links and images

--- a/odin-links-and-images/index.html
+++ b/odin-links-and-images/index.html
@@ -11,15 +11,15 @@
         - noopner = prevents the opened link from gaining access to the webpage from which it was opened
         - noreferrer = prevents the opened link from knowing which webpage or resource has a link (or refrence) to it.
      -->
-    <a href="https://www.theodinproject.com/about" target="_blank" rel="noopener noreferrer">About The Odin Project</a>
+    <a href="https://www.theodinproject.com/about" target="_blank" rel="noopener noreferrer">About The Odin Project</a><br />
 
     <!-- Ex: Relative Link -->
-    <a href="./pages/about.html">About</a>
+    <a href="./pages/about.html">About</a><br />
 
     <!-- Image - Absolute path -->
-    <img src="https://www.theodinproject.com/mstile-310x310.png" alt="The Odin Project Logo" height="310" width="310">
+    <img src="https://www.theodinproject.com/mstile-310x310.png" alt="The Odin Project Logo" height="310" width="310"><br />
 
     <!-- Image - Relative path -->
-    <img src="./images/dog.jpg" alt="The Odin Dog" height="310" width="310">
+    <img src="./images/dog.jpg" alt="The Odin Dog" height="310" width="310"><br />
 </body>
 </html>
