--- a/links-and-images/images.html
+++ b/links-and-images/images.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>Images</h1>
+    <p>This example is about links and
+        <a href="images.html" rel="noopener noreferrer">images</a>.
+    </p>
+
 </body>
 </html>
