--- a/links-and-images/images.html
+++ b/links-and-images/images.html
@@ -11,5 +11,10 @@
         <a href="images.html" rel="noopener noreferrer">images</a>.
     </p>
 
+    <p>This page covers common images formats, but you may also be looking for <a href="links.html">links</a> and <a href="misc/extras.html">useful extras</a>.</p>
+
+    <h2>JPGs</h2>
+    <p>JPG images are good for photos.</p>
+    <img src="images/mochi.jpg">
 </body>
 </html>
