--- a/links-and-images/images.html
+++ b/links-and-images/images.html
@@ -16,5 +16,9 @@
     <h2>JPGs</h2>
     <p>JPG images are good for photos.</p>
     <img src="images/mochi.jpg">
+
+    <h2>GIFs</h2>
+    <p>GIFs are good for animations.</p>
+    <img src="images/mochi.gif">
 </body>
 </html>
