--- a/links-and-images/images.html
+++ b/links-and-images/images.html
@@ -20,5 +20,9 @@
     <h2>GIFs</h2>
     <p>GIFs are good for animations.</p>
     <img src="images/mochi.gif">
+
+    <h2>PNGs</h2>
+    <p>PNGs are good for diagrams and icons.</p>
+    <img src="images/mochi.png">
 </body>
 </html>
