--- a/links-and-images/images.html
+++ b/links-and-images/images.html
@@ -24,5 +24,9 @@
     <h2>PNGs</h2>
     <p>PNGs are good for diagrams and icons.</p>
     <img src="images/mochi.png">
+
+    <h2>SVGs</h2>
+    <p>SVGs are <em>amazing</em>.  Use them whenever you can.</p>
+    <img src="images/mochi.svg" />
 </body>
 </html>
