--- a/links-and-images/misc/extras.html
+++ b/links-and-images/misc/extras.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Extras</h1>
+    <!-- Test Comment -->
     <p>This page is about miscellaneous HTML things, but you may also be interested in <a href="../links.html">links</a> or <a href="../images.html">images</a>.</p>
 </body>
 </html>
