--- a/flexbox/flexbox.html
+++ b/flexbox/flexbox.html
@@ -3,12 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Flexbox Demo</title>
 </head>
 <body>
-    <h1>Flexbox Demo</h1>
     <!-- This is a flexbox demo from <a href="https://internetingishard.netlify.app/html-and-css/flexbox/index.html">Interneting is Hard</a>. -->
-
-
+    <div class="menu-container">
+        <div class="menu">
+            <div class="date">Jun 9, 2024</div>
+            <div class="signup">SIgn Up</div>
+            <div class="login">Login</div>
+        </div>
+    </div>
 </body>
 </html>
