--- a/flexbox/flexbox.html
+++ b/flexbox/flexbox.html
@@ -11,8 +11,10 @@
     <div class="menu-container">
         <div class="menu">
             <div class="date">Jun 9, 2024</div>
-            <div class="signup">SIgn Up</div>
-            <div class="login">Login</div>
+            <div class="links">
+                <div class="signup">SIgn Up</div>
+                <div class="login">Login</div>
+            </div>
         </div>
     </div>
 </body>
