feature(.header): Add header html
* Add Header flex-container
* Add flex-items; .subscribe, .logo, and .social

--- a/flexbox/flexbox.html
+++ b/flexbox/flexbox.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <!-- This is a flexbox demo from <a href="https://internetingishard.netlify.app/html-and-css/flexbox/index.html">Interneting is Hard</a>. -->
+
+    <!-- Menu -------------------------------- -->
     <div class="menu-container">
         <div class="menu">
             <div class="date">Jun 9, 2024</div>
@@ -17,5 +19,15 @@
             </div>
         </div>
     </div>
+
+    <!-- Header ------------------------------ -->
+     <div class="header-container">
+        <div class="header">
+            <div class="subscribe">Subscribe &#9962;</div>
+            <div class="logo"><img src="images/awesome-logo.svg" alt=""></div>
+            <div class="social"><img src="images/social-icons.svg" alt=""></div>
+        </div>
+     </div>
+
 </body>
 </html>
