--- a/flexbox/flexbox.html
+++ b/flexbox/flexbox.html
@@ -29,5 +29,19 @@
         </div>
      </div>
 
+     <!-- Photos ----------------------------- -->
+      <div class="photo-grid-container">
+        <div class="photo-grid">
+            <div class="photo-grid-item first-item">
+                <img src="images/one.svg" alt="">
+            </div>
+            <div class="photo-grid-item">
+                <img src="images/two.svg" alt="">
+            </div>
+            <div class="photo-grid-item">
+                <img src="images/three.svg" alt="">
+            </div>
+        </div>
+      </div>
 </body>
 </html>
