--- a/flexbox/flexbox.html
+++ b/flexbox/flexbox.html
@@ -41,6 +41,12 @@
             <div class="photo-grid-item">
                 <img src="images/three.svg" alt="">
             </div>
+            <div class="photo-grid-item">
+                <img src="images/four.svg" alt="">
+            </div>
+            <div class="photo-grid-item">
+                <img src="images/five.svg" alt="">
+            </div>
         </div>
       </div>
 </body>
