--- a/flexbox/flexbox.html
+++ b/flexbox/flexbox.html
@@ -30,7 +30,7 @@
      </div>
 
      <!-- Photos ----------------------------- -->
-      <div class="photo-grid-container">
+    <div class="photo-grid-container">
         <div class="photo-grid">
             <div class="photo-grid-item first-item">
                 <img src="images/one.svg" alt="">
@@ -48,6 +48,14 @@
                 <img src="images/five.svg" alt="">
             </div>
         </div>
-      </div>
+    </div>
+
+    <!-- Footer ---------------------------- -->
+     <div class="footer">
+        <div class="footer-item footer-one"></div>
+        <div class="footer-item footer-two"></div>
+        <div class="footer-item footer-three"></div>
+     </div>
+
 </body>
 </html>
